# docs/swagger.json
@@ -3485,6 +3485,77 @@
                 }
             }
         },
+        "/api/v3/session/token/{username}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Request access tokens",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "v16.?.?"
+                ],
+                "summary": "Request access tokens",
+                "operationId": "session-3-create-token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Token request",
+                        "name": "config",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.SessionTokenRequest"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.SessionTokenRequest"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v3/skills": {
             "get": {
                 "security": [
@@ -4076,13 +4147,10 @@
                             "description": "ip:port",
                             "type": "string"
                         },
-                        "bootstrap": {
-                            "type": "boolean"
-                        },
                         "debug": {
                             "type": "boolean"
                         },
-                        "emergency_leader_timeout": {
+                        "emergency_leader_timeout_sec": {
                             "description": "seconds",
                             "type": "integer",
                             "format": "int64"
@@ -4090,7 +4158,7 @@
                         "enable": {
                             "type": "boolean"
                         },
-                        "node_recover_timeout": {
+                        "node_recover_timeout_sec": {
                             "description": "seconds",
                             "type": "integer",
                             "format": "int64"
@@ -4101,10 +4169,7 @@
                                 "type": "string"
                             }
                         },
-                        "recover": {
-                            "type": "boolean"
-                        },
-                        "sync_interval": {
+                        "sync_interval_sec": {
                             "description": "seconds",
                             "type": "integer",
                             "format": "int64"
@@ -4829,6 +4894,12 @@
             "type": "object",
             "properties": {
                 "basic": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "session": {
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -6015,7 +6086,8 @@
                     "format": "int64"
                 },
                 "extra": {
-                    "type": "string"
+                    "type": "object",
+                    "additionalProperties": true
                 },
                 "id": {
                     "type": "string"
@@ -6152,6 +6224,27 @@
                 }
             }
         },
+        "api.SessionTokenRequest": {
+            "type": "object",
+            "properties": {
+                "extra": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "match": {
+                    "type": "string"
+                },
+                "remote": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "api.SessionsActive": {
             "type": "object",
             "additionalProperties": {
@@ -6266,13 +6359,10 @@
                             "description": "ip:port",
                             "type": "string"
                         },
-                        "bootstrap": {
-                            "type": "boolean"
-                        },
                         "debug": {
                             "type": "boolean"
                         },
-                        "emergency_leader_timeout": {
+                        "emergency_leader_timeout_sec": {
                             "description": "seconds",
                             "type": "integer",
                             "format": "int64"
@@ -6280,7 +6370,7 @@
                         "enable": {
                             "type": "boolean"
                         },
-                        "node_recover_timeout": {
+                        "node_recover_timeout_sec": {
                             "description": "seconds",
                             "type": "integer",
                             "format": "int64"
@@ -6291,10 +6381,7 @@
                                 "type": "string"
                             }
                         },
-                        "recover": {
-                            "type": "boolean"
-                        },
-                        "sync_interval": {
+                        "sync_interval_sec": {
                             "description": "seconds",
                             "type": "integer",
                             "format": "int64"
